Add the comment

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
+# 'postgres' is your postgress username
+# '1234' is your postgress password
+# 'user_management' is table name
+
 DATABASE_URL=postgresql+asyncpg://postgres:1234@localhost/user_management
